--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -136,6 +136,20 @@
         <!-- ------------------------------- -->  
         <script src="js/estado/selection.js" type="text/javascript"></script>
 
+        <!-- ------------------------------- -->  
+        <script src="js/entrada/plist.js" type="text/javascript"></script>
+        <script src="js/entrada/view.js" type="text/javascript"></script>
+        <script src="js/entrada/remove.js" type="text/javascript"></script>
+        <script src="js/entrada/edit.js" type="text/javascript"></script>
+        <script src="js/entrada/new.js" type="text/javascript"></script>
+        <!-- ------------------------------- -->
+        <!-- ------------------------------- -->  
+        <script src="js/salida/plist.js" type="text/javascript"></script>
+        <script src="js/salida/view.js" type="text/javascript"></script>
+        <script src="js/salida/remove.js" type="text/javascript"></script>
+        <script src="js/salida/edit.js" type="text/javascript"></script>
+        <script src="js/salida/new.js" type="text/javascript"></script>
+        <!-- ------------------------------- -->
 
 
 
