--- a/src/main/webapp/js/salida/selection.html
+++ b/src/main/webapp/js/salida/selection.html
@@ -120,7 +120,7 @@ THE SOFTWARE.
                                 <select id="selectFilter" class="form-control" name="filter" style="width: 160px" ng-model="filter">
                                     <option style="display:none">selecciona un campo</option>                                    
                                     <option value="id">Identificador</option>
-                                    <option value="descripcion">QWERTY</option>
+                                    <option value="descripcion">QWERTYT</option>
                                 </select>
                                 <select id="selectFilteroperator" class="form-control" name="filteroperator" width="80" style="width: 200px" ng-model="filteroperator">
                                     <option style="display:none">selecciona una operacion</option>
@@ -174,7 +174,7 @@ THE SOFTWARE.
                         <a href="#/{{ob}}/plist/{{numpage}}/{{rpp}}?order=id&ordervalue=asc"><i class="glyphicon glyphicon-arrow-up"></i></a>
                         <a href="#/{{ob}}/plist/{{numpage}}/{{rpp}}?order=id&ordervalue=desc"><i class="glyphicon glyphicon-arrow-down"></i></a>
                     </th>
-                    <th>QW3ERTYUs</th>
+                    <th>Descripción</th>
                     <th>Acciones</th>
                 </tr>
             </thead>
