--- a/src/main/webapp/js/system/menu.html
+++ b/src/main/webapp/js/system/menu.html
@@ -27,32 +27,33 @@ THE SOFTWARE.
 
 -->
 <ul class="nav navbar-nav" id="appMenu">
-   <li><a href="#/home">Home</a></li>
-   <li><a href="#/about"><i class="fa fa-icon-smile"></i>About</a></li>
-   <li class="dropdown">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"><i class="fa fa-icon-list-alt"></i>Principal<span class="caret"></span></a>
-      <ul class="dropdown-menu" role="menu">
-         <li><a href="#/documento/plist"><i class="fa fa-fw fa-file-text"></i>Documentos</a></li>
-         <li><a href="#/usuario/plist"><i class="fa fa-fw fa-user"></i>Usuarios</a></li>
-      </ul>
-   </li>
-   <li class="dropdown">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"><i class="fa fa-icon-list-alt"></i>Consultas<span class="caret"></span></a>
-      <ul class="dropdown-menu" role="menu">
-         <li class="dropdown-header">Documento</li>
-         <li><a href="#/documento/abc"><i class="fa fa-fw fa-power-off"></i>Documento abc</a></li>
-         <li><a href="#/documento/documentosautor"><i class="fa fa-fw fa-file-text"></i>Documentos x autor list</a></li>
-      </ul>
-   </li>
-   <li class="dropdown">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"><i class="fa fa-icon-list-alt"></i>Configuración<span class="caret"></span></a>
-      <ul class="dropdown-menu" role="menu">
-         <li class="dropdown-header">Relacionados con el documento</li>
-         <li><a href="#/tipodocumento/plist"><i class="fa fa-fw fa-tag"></i>Tipos de documento</a></li>
-         <li class="divider"></li>
-         <li class="dropdown-header">Relacionados con el usuario</li>
-         <li><a href="#/estado/plist"><i class="fa fa-fw fa-smile-o"></i>Estados de usuario</a></li>
-         <li><a href="#/tipousuario/plist"><i class="fa fa-fw fa-male"></i>Tipos de usuario</a></li>
-      </ul>
-   </li>
+    <li><a href="#/home">Home</a></li>
+    <li><a href="#/about"><i class="fa fa-icon-smile"></i>About</a></li>
+    <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"><i class="fa fa-icon-list-alt"></i>Principal<span class="caret"></span></a>
+        <ul class="dropdown-menu" role="menu">
+            <li><a href="#/entrada/plist"><i class="fa fa-fw fa-file-text"></i>Entradas</a></li>
+            <li><a href="#/salida/plist"><i class="fa fa-fw fa-file-text"></i>Salidas</a></li>
+            <li><a href="#/usuario/plist"><i class="fa fa-fw fa-user"></i>Usuarios</a></li>
+        </ul>
+    </li>
+    <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"><i class="fa fa-icon-list-alt"></i>Consultas<span class="caret"></span></a>
+        <ul class="dropdown-menu" role="menu">
+            <li class="dropdown-header">Documento</li>
+            <li><a href="#/documento/abc"><i class="fa fa-fw fa-power-off"></i>Documento abc</a></li>
+            <li><a href="#/documento/documentosautor"><i class="fa fa-fw fa-file-text"></i>Documentos x autor list</a></li>
+        </ul>
+    </li>
+    <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"><i class="fa fa-icon-list-alt"></i>Configuración<span class="caret"></span></a>
+        <ul class="dropdown-menu" role="menu">
+            <li class="dropdown-header">Relacionados con el documento</li>
+            <li><a href="#/tipodocumento/plist"><i class="fa fa-fw fa-tag"></i>Tipos de documento</a></li>
+            <li class="divider"></li>
+            <li class="dropdown-header">Relacionados con el usuario</li>
+            <li><a href="#/estado/plist"><i class="fa fa-fw fa-smile-o"></i>Estados de usuario</a></li>
+            <li><a href="#/tipousuario/plist"><i class="fa fa-fw fa-male"></i>Tipos de usuario</a></li>
+        </ul>
+    </li>
 </ul>
