--- a/src/main/webapp/js/tipodocumento/selection.html
+++ b/src/main/webapp/js/tipodocumento/selection.html
@@ -179,7 +179,7 @@ THE SOFTWARE.
         <thead>             
             <tr>                                                   
                 <th class="text-right">Identificador</th>
-                <th>Descripción</th>
+                <th>QWERTY</th>
                 <th>¿Privado?</th>
                 <th>Seleccionar</th>
             </tr>
