--- a/src/main/webapp/js/system/menu.html
+++ b/src/main/webapp/js/system/menu.html
@@ -27,17 +27,18 @@ THE SOFTWARE.
 
 -->
 <ul class="nav navbar-nav" id="appMenu">
-    <li><a href="#/home">Home</a></li>
-    <li><a href="#/about"><i class="fa fa-icon-smile"></i>About</a></li>
+    <li><a href="#/home">Inicio</a></li>
+    <!--<li><a href="#/about"><i class="fa fa-icon-smile"></i>About</a></li>-->
     <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"><i class="fa fa-icon-list-alt"></i>Principal<span class="caret"></span></a>
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"><i class="fa fa-icon-list-alt"></i>Checks<span class="caret"></span></a>
         <ul class="dropdown-menu" role="menu">
             <li><a href="#/entrada/plist"><i class="fa fa-fw fa-file-text"></i>Entradas</a></li>
             <li><a href="#/salida/plist"><i class="fa fa-fw fa-file-text"></i>Salidas</a></li>
-            <li><a href="#/usuario/plist"><i class="fa fa-fw fa-user"></i>Usuarios</a></li>
+            <!--<li><a href="#/usuario/plist"><i class="fa fa-fw fa-user"></i>Usuarios</a></li>-->
         </ul>
     </li>
-    <li class="dropdown">
+    <li><a href="#/usuario/plist">Usuarios</a></li>
+<!--    <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"><i class="fa fa-icon-list-alt"></i>Consultas<span class="caret"></span></a>
         <ul class="dropdown-menu" role="menu">
             <li class="dropdown-header">Documento</li>
@@ -55,5 +56,5 @@ THE SOFTWARE.
             <li><a href="#/estado/plist"><i class="fa fa-fw fa-smile-o"></i>Estados de usuario</a></li>
             <li><a href="#/tipousuario/plist"><i class="fa fa-fw fa-male"></i>Tipos de usuario</a></li>
         </ul>
-    </li>
+    </li>-->
 </ul>
