--- a/src/main/webapp/js/usuario/view.html
+++ b/src/main/webapp/js/usuario/view.html
@@ -43,6 +43,8 @@ THE SOFTWARE.
                     <tr><td>apellidos</td><td>{{bean.apellidos}}</td></tr> 
                     <tr><td>login</td><td>{{bean.login}}</td></tr> 
                     <tr><td>password</td><td>{{bean.password}}</td></tr> 
+                    <tr><td>puesto</td><td>{{bean.puesto}}</td></tr> 
+                    <!--<tr><td>Numero de telefono</td><td>{{bean.num_tlfn}}</td></tr>--> 
 
 <!--                    <tr>
                         <td>estado del usuario</td>
@@ -51,7 +53,7 @@ THE SOFTWARE.
                         </td>
                     </tr> -->
                     
-                    <tr><td>MAC del telefono</td><td>{{bean.mac_tlfn}}</td></tr>
+                    <!--<tr><td>MAC del telefono</td><td>{{bean.mac_tlfn}}</td></tr>-->
                     <tr><td>Numero de teléfono</td><td>{{bean.num_tlfn}}</td></tr>
                     <tr>
                         <td>tipo de usuario</td>
