--- a/src/main/webapp/js/entrada/view.html
+++ b/src/main/webapp/js/entrada/view.html
@@ -39,7 +39,8 @@ THE SOFTWARE.
                 </thead>
                 <tbody>
                     <tr><td>id</td><td>{{bean.id}}</td></tr>       
-                    <tr><td>titulo</td><td>{{bean.fecha_entrada}}</td></tr> 
+                    <tr><td>Fecha de entrada</td><td>{{bean.fecha_entrada}}</td></tr> 
+                    <tr><td>Hora de entrada</td><td>{{bean.hora_entrada}}</td></tr> 
                     <!--<tr><td>contenido</td><td>{{bean.contenido| clipString}}</td></tr>--> 
 <!--                    <tr><td>alta</td><td>{{bean.alta}}</td></tr> 
                     <tr><td>cambio</td><td>{{bean.cambio}}</td></tr> 
