--- a/src/main/webapp/js/salida/remove.html
+++ b/src/main/webapp/js/salida/remove.html
@@ -39,7 +39,8 @@ THE SOFTWARE.
                     </thead>
                     <tbody>
                         <tr><td>id</td><td>{{bean.id}}</td></tr>       
-                        <tr><td>titulo</td><td>{{bean.fecha_salida}}</td></tr> 
+                        <tr><td>Fecha de salida</td><td>{{bean.fecha_salida}}</td></tr> 
+                        <tr><td>Hora de salida</td><td>{{bean.hora_salida}}</td></tr> 
 <!--                        <tr><td>contenido</td><td>{{bean.contenido| clipString}}</td></tr> 
                         <tr><td>alta</td><td>{{bean.alta}}</td></tr> 
                         <tr><td>cambio</td><td>{{bean.cambio}}</td></tr> 
