--- a/src/main/webapp/js/usuario/plist.html
+++ b/src/main/webapp/js/usuario/plist.html
@@ -289,7 +289,7 @@ THE SOFTWARE.
                             <ul class="dropdown-menu">
                                 <li><a class="btn btn-default action02" href="#/{{ob}}/view/{{obj.id}}"><i class="fa fa-eye fa-2g"></i> Ver</a></li>
                                 <li><a class="btn btn-default action03" href="#/{{ob}}/edit/{{obj.id}}"><i class="fa fa-pencil fa-2g"></i> Editar</a></li>
-                                <li><a class="btn btn-default action04" href="#/{{ob}}/remove/{{obj.id}}"><i class="fa fa-times fa-2g"></i> Borrar</a></li>
+                                <!--<li><a class="btn btn-default action04" href="#/{{ob}}/remove/{{obj.id}}"><i class="fa fa-times fa-2g"></i> Borrar</a></li>-->
                             </ul>
                         </div>
                     </td>
