--- a/src/main/webapp/js/usuario/selection.html
+++ b/src/main/webapp/js/usuario/selection.html
@@ -31,24 +31,24 @@ THE SOFTWARE.
         <div class="col-xs-12" ng-show="!status">
             <div role="tabpanel">
                 <ul class="nav nav-tabs" role="tablist">
-                    <li role="presentation" class="active">
+<!--                    <li role="presentation" class="active">
                         <a data-target="#pane0" aria-controls="pane0" role="tab" data-toggle="tab" aria-expanded="false">Consulta</a>
                     </li>
                     <li role="presentation"><a data-target="#pane1" aria-controls="pane1" role="tab" data-toggle="tab" aria-expanded="true">Campos visibles</a></li>
                     <li role="presentation"><a data-target="#pane2" aria-controls="pane2" role="tab" data-toggle="tab">Filtro de servidor</a></li>
                     <li role="presentation"><a data-target="#pane3" aria-controls="pane3" role="tab" data-toggle="tab">Filtro de cliente</a></li>
-                    <li role="presentation"><a data-target="#pane4" aria-controls="pane4" role="tab" data-toggle="tab">Nuevo registro</a></li>
+                    <li role="presentation"><a data-target="#pane4" aria-controls="pane4" role="tab" data-toggle="tab">Nuevo registro</a></li>-->
                 </ul>
                 <div class="tab-content">
                     <div role="tabpanel" id="pane0" class="tab-pane fade active in">
                         <p></p>
                         <div class="row">
                             <div class="col-lg-3 col-md-3 col-sm-12">
-                                <p>Mostrando una consulta de {{registers}} registros.</p>
+<!--                                <p>Mostrando una consulta de {{registers}} registros.</p>
                                 <p ng-show="orderParams == ''">Contenido no ordenado</p>
                                 <p ng-show="orderParams != ''"><small>Contenido ordenado por {{order}} ({{ordervalue}}) <a href="#/{{ob}}/plist/{{numpage}}/{{rpp}}{{paramsWithoutOrder.replace('&', '?')}}" id="linkQuitarOrden">(Quitar orden)</a></small></p>
                                 <p ng-show="filterParams == ''">Contenido no filtrado</p>
-                                <p ng-show="filterParams != ''"><small>Contenido filtrado ({{filter}} {{filteroperator}} {{filtervalue}}) <a href="#/{{ob}}/plist/{{numpage}}/{{rpp}}{{paramsWithoutFilter.replace('&', '?')}}" id="linkQuitarFiltro">(Quitar filtro)</a></small></p>
+                                <p ng-show="filterParams != ''"><small>Contenido filtrado ({{filter}} {{filteroperator}} {{filtervalue}}) <a href="#/{{ob}}/plist/{{numpage}}/{{rpp}}{{paramsWithoutFilter.replace('&', '?')}}" id="linkQuitarFiltro">(Quitar filtro)</a></small></p>-->
                             </div>
 
                             <div class="col-lg-6  col-md-6 col-sm-8 text-center">
@@ -125,7 +125,7 @@ THE SOFTWARE.
                                     <option value="login">Login</option>
                                     <option value="password">Password</option>
                                     <option value="puesto">Puesto</option>
-                                    <option value="mac_tlfn">Mac</option>
+                                    <!--<option value="mac_tlfn">Mac</option>-->
                                     <option value="num_tlfn">Numero</option>
                                     <option value="tipousuario">Tipo</option>
                                 </select>
@@ -176,20 +176,20 @@ THE SOFTWARE.
         <table class="table table-responsive table-bordered table-hover table-striped table-condensed dataTable no-footer">
             <thead>             
                 <tr>                                                   
-                    <th class="text-right">
+                    <th class="text-center">
                         Identificador
                         <a href="#/{{ob}}/plist/{{numpage}}/{{rpp}}?order=id&ordervalue=asc"><i class="glyphicon glyphicon-arrow-up"></i></a>
                         <a href="#/{{ob}}/plist/{{numpage}}/{{rpp}}?order=id&ordervalue=desc"><i class="glyphicon glyphicon-arrow-down"></i></a>
                     </th>
-                    <th>Nombre</th>
-                    <th>Apellidos</th>
-                    <th>Login</th>
-                    <th>Password</th>
-                    <th>Puesto</th>
-                    <th>Mac_tlfn</th>
-                    <th>Num_tlfn</th>
-                    <th>Tipo</th>
-                    <th>Acciones</th>
+                    <th class="text-center">Nombre</th>
+                    <th class="text-center">Apellidos</th>
+                    <th class="text-center">Login</th>
+                    <th class="text-center">Password</th>
+                    <th class="text-center">Puesto</th>
+                    <!--<th>Mac_tlfn</th>-->
+                    <th class="text-center">Num_tlfn</th>
+                    <th class="text-center">Tipo</th>
+                    <th class="text-center">Acciones</th>
                 </tr>
             </thead>
             <tbody>
@@ -200,7 +200,7 @@ THE SOFTWARE.
                     <td>{{obj.login}}</td>
                     <td>{{obj.password}}</td>
                     <td>{{obj.puesto}}</td>
-                    <td>{{obj.mac_tlfn}}</td>
+                    <!--<td>{{obj.mac_tlfn}}</td>-->
                     <td>{{obj.num_tlfn}}</td>
                     <td>{{obj.obj_tipousuario.descripcion}}</td>
                     <td>
